# lab-workspace

.devcontainer/: README.md  devcontainer.json
src/lab7/: CMakeLists.txt
src/lab7/include/lab7/: command_interface.hpp  hand_eye_calib.hpp  measurements.hpp
src/lab7/msg/: Status.msg
src/lab7/src/: command_interface.cpp  hand_eye_calib.cpp  measurements.cpp
src/lab7/srv/: CaptureMeasurements.srv  HandEyeCalib.srv
src/lab8/include/lab8/: eef_pose_tracker.hpp  ur3e_move_interface.hpp
src/lab8/src/: eef_pose_tracker.cpp  lab8.cpp  ur3e_move_interface.cpp
src/lab_rviz_panels/: CMakeLists.txt  package.xml  plugin.xml
src/lab_rviz_panels/include/lab_rviz_panels/: hand_eye_calib_panel.hpp
src/lab_rviz_panels/src/: hand_eye_calib_panel.cpp
src/lab_rviz_panels/ui/: hand_eye_calib_panel.ui
